[workspace]
members = [
    "crates/dust_frontend",
    "crates/dust_dir",
    "crates/dust_semantics",
    "crates/dust_codegen",
    "crates/dust_driver",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dust LLC"]
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

cranelift-codegen = "0.110"
cranelift-module = "0.110"
cranelift-object = "0.110"

target-lexicon = "0.12"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true