[workspace]
members = [
    "crates/dust_frontend",
    "crates/dust_dir",
    "crates/dust_semantics",
    "crates/dust_codegen",
    "crates/dust_driver",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Dust LLC"]
license-file = "LICENSE"

[workspace.dependencies]
anyhow = { git = "https://github.com/dustsoftware/anyhow.git", rev = "80bfe291b16071c70f141e90e67e7032d966826b" }
thiserror = { git = "https://github.com/dustsoftware/thiserror.git", rev = "41938bd3a03a70d34ed8e53d99c89c770c7c9c41" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

cranelift-codegen = "0.110"
cranelift-module = "0.110"
cranelift-object = "0.110"
cranelift-frontend = "0.110"

target-lexicon = "0.12"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true