# crates/dust_driver/Cargo.toml

[package]
name = "dust"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dust"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.5"

dust_frontend = { path = "../dust_frontend" }
dust_semantics = { path = "../dust_semantics" }
dust_dir = { path = "../dust_dir" }
dust_codegen = { path = "../dust_codegen" }