# crates/dust_driver/Cargo.toml

[package]
name = "dust"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dust"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
walkdir.workspace = true

dust_frontend = { path = "../dust_frontend" }
dust_semantics = { path = "../dust_semantics" }
dust_dir = { path = "../dust_dir" }
dust_codegen = { path = "../dust_codegen" }
